[B]Version 1.3.4[/B]
- Add "Movie set information" label to video information dialog
- Bugfix video codec flagging
- Add spin controls to Favourites and File Browser dialogs

[B]Version 1.3.3[/B]
- Startup animation also works when using splash screen

[B]Version 1.3.2[/B]
- Add startup animation

[B]Version 1.3.1[/B]
- Add skin setting to blur fanart backgrounds

[B]Version 1.3.0[/B]
- Add gaming support

[B]Version 1.2.7[/B]
- Add skin setting to use splash screen

[B]Version 1.2.6[/B]
- Fix List view label2
- Fix select dialog focus issue

[B]Version 1.2.5[/B]
- Fix languages

[B]Version 1.2.4[/B]
- Widget updates and fixes

[B]Version 1.2.3[/B]
- Add RDS support

[B]Version 1.2.2[/B]
- Fix widget labels
- Add Player.Chapters and Player.CutList to seekbar OSD
- Add cache to progress bar OSD
- Add slider control to video and music OSD
- Remove slider control from DialogSeekBar.xml

[B]Version 1.2.1[/B]
- Fix select dialog buttons and labels
- Fix TetradUI logo position in Login screen

[B]Version 1.2.0[/B]
- Add PVR support

[B]Version 1.1.11[/B]
- Add add-on shortcuts for Applications window

[B]Version 1.1.10[/B]
- Add ListItem.AddonLifecycleType / ListItem.AddonLifecycleDesc
- Fixes for information window animations

[B]Version 1.1.9[/B]
- Add Russian translation (thanks to vansai)

[B]Version 1.1.8[/B]
- Fix sub blade backgrounds

[B]Version 1.1.7[/B]
- Cleanup backgrounds
- Fix backgrounds from Apps window
- Update startup.xml

[B]Version 1.1.6[/B]
- Add skin settings to animate fanart backgrounds
- Add support for script.artistslideshow

[B]Version 1.1.5[/B]
- Add missing radiobutton textures
- Cleanup images
- Add invalidcolor for edit control

[B]Version 1.1.4[/B]
- Add music multi disc support

[B]Version 1.1.3[/B]
- Fix category and submenu focus
- Fixes for codec flagging
- Adjustments to sideblade TetradUI logo

[B]Version 1.1.2[/B]
- Skin settings: hide movies / tv shows / music buttons are disabled if no library content is available