@@ -2,27 +2,29 @@
 <window>
 	<defaultcontrol>8</defaultcontrol>
 	<controls>
-		<control type="videowindow" id="20">
+		<control type="videowindow">
 			<description>videowindow</description>
 			<width>1280</width>
 			<height>720</height>
 		</control>
 		<control type="mover" id="8">
 			<description>top left mover</description>
+			<width>128</width>
+			<height>128</height>
 			<texturefocus>calibrate-topleft-focus.png</texturefocus>
 			<texturenofocus>calibrate-topleft.png</texturenofocus>
 		</control>
 		<control type="mover" id="9">
 			<description>right bottom mover</description>
-			<left>700</left>
-			<top>500</top>
+			<width>128</width>
+			<height>128</height>
 			<texturefocus>calibrate-bottomright-focus.png</texturefocus>
 			<texturenofocus>calibrate-bottomright.png</texturenofocus>
 		</control>
 		<control type="mover" id="10">
 			<description>subtitle position mover</description>
-			<left>200</left>
-			<top>500</top>
+			<width>400</width>
+			<height>128</height>
 			<texturefocus>calibrate-subtitles-focus.png</texturefocus>
 			<texturenofocus>calibrate-subtitles.png</texturenofocus>
 		</control>
@@ -37,12 +39,6 @@
 		<control type="group">
 			<left>0</left>
 			<top>60</top>
-			<control type="image" id="1">
-				<width>1280</width>
-				<height>80</height>
-				<colordiffuse>BBFFFFFF</colordiffuse>
-				<texture border="0,10,0,10">volume-panel-bg.png</texture>
-			</control>
 			<control type="label" id="2">
 				<description>coordinates label</description>
 				<top>10</top>
