@@ -1,3 +1,7 @@
+[B]Version 1.3.5[/B]
+- Recode video calibration window
+- Bugfixes
+
 [B]Version 1.3.4[/B]
 - Add "Movie set information" label to video information dialog
 - Bugfix video codec flagging
